--- a/WindowsFormsEntity/App.config
+++ b/WindowsFormsEntity/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DBModels" connectionString="data source=localhost,1433;initial catalog=efdb;persist security info=True;user id=sa;password=M@r15ma02li82;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBEntities" connectionString="metadata=res://*/Data.DBModels.csdl|res://*/Data.DBModels.ssdl|res://*/Data.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost,1433;initial catalog=efdb;user id=sa;password=M@r15ma02li82;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
